--- a/index.html
+++ b/index.html
@@ -5,10 +5,13 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Meu Site Pessoal</title>
+        <link rel="stylesheet" href="./assets/css/estilo.css" type="text/css">
     </head>
     <body>
         <nav>
-            Vai ter um menu aqui
+            <li><a href="#home">Home</a></li>
+            <li><a href="#projetos">Projetos</a></li>
+            <li><a href="#redes_sociais">Redes Sociais</a></li>
         </nav>
         <div class="conteudo">
             O corpo do site vai ser aqui
