--- a/index.html
+++ b/index.html
@@ -14,7 +14,38 @@
             <li><a href="#redes_sociais">Redes Sociais</a></li>
         </nav>
         <div class="conteudo">
-            O corpo do site vai ser aqui
+            <section id="home">
+                <p>
+                    Visualiza os arquivos que foram alterados
+                </p>
+                <p class="comando-git">
+                    git status
+                </p>
+                <p>
+                    Prepara um arquivo para ser versionado
+                </p>
+                <p class="comando-git">
+                    git add nome_arquivo
+                </p>
+                <p>
+                    Gera a versão das modificações
+                </p>
+                <p class="comando-git">
+                    git commit -m "mensagem"
+                </p>
+                <p>
+                    Envia para o GitHub
+                </p>
+                <p class="comando-git">
+                   git push origin main 
+                </p>
+            </section>
+            <section id="projetos">
+                aqui vai ter os projetos
+            </section>
+            <section id="redes_sociais">
+                aqui vai ter as redes sociais
+            </section>
         </div>
         <footer>vai ter um rodapé</footer>
     </body>
