--- a/index.html
+++ b/index.html
@@ -15,6 +15,34 @@
         </nav>
         <div class="conteudo">
             <section id="home">
+                <div class="explicacao">
+                    <p class="git">
+                        <img src="assets/img/Git-Icon-1788C.png">
+                        Git é o sistema de controle de versão open source mais usado no mundo atualmente!
+                        <br> 
+                        Ele é usado para controlar o histórico de alterações de arquivos e principalmente de projetos
+                        <br>
+                        de desenvolvimento de software. 
+                        <br>
+                        Ele permite mais flexibilidade no fluxo de trabalho, segurança e desempenho.
+                    </p>
+                    <br><br>
+                    <p class="github">
+                        <img src="assets/img/github-icon.png">
+                        O GitHub é considerado é uma ferramenta essencial para engenheiros de software, 
+                        com uma popularidade sem igual. 
+                        <br>
+                        Atualmente, ele acomoda mais de 25 milhões de usuários. 
+                        <br>
+                        Isso significa que há um número considerável de profissionais que estão procurando o GitHub 
+                        para melhorar o fluxo de trabalho e a colaboração.
+                        <br><br>
+                        Em suma, o GitHub é um serviço baseado em nuvem que hospeda um sistema de controle de versão (VCS) chamado Git.
+                        <br> 
+                        Ele permite que os desenvolvedores colaborem e façam mudanças em projetos compartilhados enquanto mantêm um registro 
+                        detalhado do seu progresso.
+                    </p>
+                </div>
                 <p>
                     Visualiza os arquivos que foram alterados
                 </p>
