Adicionei mais coisa no HTML, CSS e imagens

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <section id="home">
                 <div class="explicacao">
                     <p class="git">
-                        <img src="assets/img/Git-Icon-1788C.png">
+                        <img src="./assets/img/Git-Icon-1788C.png">
                         Git é o sistema de controle de versão open source mais usado no mundo atualmente!
                         <br> 
                         Ele é usado para controlar o histórico de alterações de arquivos e principalmente de projetos
@@ -28,7 +28,7 @@
                     </p>
                     <br><br>
                     <p class="github">
-                        <img src="assets/img/github-icon.png">
+                        <img src="./assets/img/github-icon.png">
                         O GitHub é considerado é uma ferramenta essencial para engenheiros de software, 
                         com uma popularidade sem igual. 
                         <br>
@@ -68,8 +68,24 @@
                    git push origin main 
                 </p>
             </section>
-            <section id="projetos">
-                aqui vai ter os projetos
+            <section id="projeto">
+                <img src="./assets/img/html-css-javascript.jpg" alt="">
+                <div>
+                    <p>UM resumo legal de um projeto</p>
+                    <div class="labels">
+                        <span>HTML</span>
+                    </div>
+                </div>
+            </section>
+            <section id="projeto">
+                <img src="./assets/img/html-css-javascript.jpg" alt="">
+                <div>
+                    <p>UM resumo legal de um projeto</p>
+                    <div class="labels">
+                        <span>JavaScript</span>
+                        <span>CSS</span>
+                    </div>
+                </div>
             </section>
             <section id="redes_sociais">
                 aqui vai ter as redes sociais
