Adicionei uma função no CSS e arrumei o HTMl

--- a/index.html
+++ b/index.html
@@ -68,18 +68,16 @@
                    git push origin main 
                 </p>
             </section>
-            <section id="projeto">
-                <img src="./assets/img/html-css-javascript.jpg" alt="">
-                <div>
+            <section class="projetos">
+                <div class="projeto">
+                    <img src="./assets/img/html-css-javascript.jpg" alt="">
                     <p>UM resumo legal de um projeto</p>
                     <div class="labels">
                         <span>HTML</span>
                     </div>
                 </div>
-            </section>
-            <section id="projeto">
-                <img src="./assets/img/html-css-javascript.jpg" alt="">
-                <div>
+                <div class="projeto">
+                    <img src="./assets/img/html-css-javascript.jpg" alt="">
                     <p>UM resumo legal de um projeto</p>
                     <div class="labels">
                         <span>JavaScript</span>
