Adicionei as minhas redes sociais no site

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                    git push origin main 
                 </p>
             </section>
-            <section class="projetos">
+            <section id="projetos">
                 <div class="projeto">
                     <img src="./assets/img/html-css-javascript.jpg" alt="">
                     <p>UM resumo legal de um projeto</p>
@@ -86,7 +86,20 @@
                 </div>
             </section>
             <section id="redes_sociais">
-                aqui vai ter as redes sociais
+                <div class="rede_social">
+                    <img src="./assets/img/twitter-icon.png" alt="">
+                    <div class="labels">
+                        <span>TWITTER</span>
+                    </div>
+                    <p>@BernardoSRos</p>
+                </div>
+                <div class="rede_social">
+                    <img src="./assets/img/Discord-Logo.png" class="discord" alt="">
+                    <div class="labels">
+                        <span>DISCORD</span>
+                    </div>
+                    <p>Ermiles#4361</p>
+                </div>
             </section>
         </div>
         <footer>vai ter um rodapé</footer>
