Adicionei meu Instagram

--- a/index.html
+++ b/index.html
@@ -100,6 +100,13 @@
                     </div>
                     <p>Ermiles#4361</p>
                 </div>
+                <div class="rede_social">
+                    <img src="./assets/img/instagram-logo.png" class="instagram" alt="">
+                    <div class="labels">
+                        <span>INSTAGRAM</span>
+                    </div>
+                    <p>bernardoros16</p>
+                </div>
             </section>
         </div>
         <footer>vai ter um rodapé</footer>
