Adicionei um rodapé

--- a/index.html
+++ b/index.html
@@ -109,6 +109,10 @@
                 </div>
             </section>
         </div>
-        <footer>vai ter um rodapé</footer>
+        <footer id="rodape">
+            <h1>Feito com HTML e CSS</h1>
+            <h3>Versionando com o GITHUB</h3>
+            <h4>Hospedando com o Github pages</h4>
+        </footer>
     </body>
 </html>
